--- a/ADMINUI.csproj
+++ b/ADMINUI.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -257,7 +258,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BO\BO\BO.csproj">
+    <ProjectReference Include="..\TDACL\BO\BO.csproj">
       <Project>{8980d316-71bb-4914-b665-c41a5ae5f02a}</Project>
       <Name>BO</Name>
     </ProjectReference>
